--- a/litreview/website/templates/website/ticket_snippet.html
+++ b/litreview/website/templates/website/ticket_snippet.html
@@ -1,5 +1,3 @@
-
-
 <div>
     <div class="ticket__header">
         <div class="ticket__user">
@@ -19,10 +17,23 @@
                 <img src="{{post.image.url}}" alt="image du livre">
             {% endif %}
         </div>
-        {% if not post.user_reviewed_ticket %}
+
+        {% if not post.user_reviewed_ticket and main_feed %}
             <div class="ticket__review__button">
                 <a href="{% url 'add_review' post.user %}?id={{post.id}}">
                     <button id="review__button" type="button" action=>Créer une critique</button>
+                </a>
+            </div>
+        {% endif %}
+
+        {% if user_feed %}
+            <div class="user__post__button">
+                <a href="{% url 'create_ticket' post.user %}?id={{post.id}}">
+                    <button id="change__button" type="button" action=>Modifier</button>
+                </a>
+                <a href=>
+                    {% comment %} "{% url 'del_ticket' post.user %}?id={{post.id}}" {% endcomment %}
+                    <button id="delete__button" type="button" action=>Supprimer</button>
                 </a>
             </div>
         {% endif %}
