implementation initial value when modifying review

--- a/litreview/creation/templates/creation/user_posts.html
+++ b/litreview/creation/templates/creation/user_posts.html
@@ -5,7 +5,7 @@
 
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'website/feed.css' %}" type="text/css" />
-    {% comment %} <link rel="stylesheet" href="{% static 'creation/user_post.css' %}" type="text/css" /> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'creation/user_posts.css' %}" type="text/css" />
 
 {% endblock %}
 
