--- a/litreview/website/templates/website/review_snippet.html
+++ b/litreview/website/templates/website/review_snippet.html
@@ -38,13 +38,10 @@
 
     {% if user_feed %}
             <div class="user__post__button">
+                <a href="{% url 'add_review' post.user %}?review_id={{post.id}}">
+                    <button id="change__button" type="button" action="">Modifier</button></a>
                 <a href="{% url 'add_review' post.user %}?id={{post.id}}">
-                    <button id="change__button" type="button" action=>Modifier</button>
-                </a>
-                <a href=>
-                    {% comment %} "{% url 'del_review' post.user %}?id={{post.id}}"> {% endcomment %}
-                    <button id="delete__button" type="button" action=>Supprimer</button>
-                </a>
+                    <button id="delete__button" type="button" action="">Supprimer</button></a>
             </div>
     {% endif %}
     
