--- a/litreview/website/templates/website/ticket_snippet.html
+++ b/litreview/website/templates/website/ticket_snippet.html
@@ -28,7 +28,7 @@
 
         {% if user_feed %}
             <div class="user__post__button">
-                <a href="{% url 'create_ticket' post.user %}?ticket_id={{post.id}}">
+                <a href="{% url 'update_ticket' post.title %}?ticket_id={{post.id}}">
                     <button id="change__button" type="button" action=>Modifier</button></a>
 
                 <a href="{% url 'delete_ticket' post.title %}?ticket_id={{post.id}}">
