bugfix creation & modification ticket and review

--- a/litreview/creation/templates/creation/add_review.html
+++ b/litreview/creation/templates/creation/add_review.html
@@ -22,6 +22,7 @@
         <div class="review">
             <p>{{review_title}}</p>
             {% crispy review_form %}
+            <input type=hidden value={{post.id}} name="ticket_id">
         </div>
 
         <div class="button__field">
