--- a/litreview/website/static/website/feed.css
+++ b/litreview/website/static/website/feed.css
@@ -18,7 +18,7 @@
 .ticket__content, .review__ticket{
     padding:1rem;
     display:grid;
-    grid-template: "title title title" 2rem "picture descrip descrip" 1fr "picture button button" auto / 1fr 1fr 1fr;
+    grid-template: "title title title" 2rem "picture descrip descrip" minmax(100px, max-content) "blank button button" auto / 1fr 1fr 1fr;
     justify-items: center;
     align-items: center;
     height: fit-content;
@@ -28,6 +28,7 @@
 .ticket__title{
     grid-area: title;
     font-size: larger;
+    width: 100%; 
     color:red;
     padding: 1rem 0rem 1rem 0rem;
 }
@@ -72,7 +73,7 @@
 
 .review__content{
     display: grid;
-    grid-template: "headline rating" auto "body body" auto "ticket ticket" 1fr / auto 1fr
+    grid-template: "headline rating" auto "body body" auto "ticket ticket" auto / auto 1fr
 } 
 
 .review__headline, .text{
@@ -102,21 +103,21 @@
 
 .review__content .review__ticket{
     grid-area: ticket;
-    justify-self: right;
-    width: fit-content;
-    grid: "picture user" auto "picture title" auto "picture button" 1fr / 1fr auto;
+    grid-template: "header header header" auto "title title title" auto "picture descrip descrip" auto "blank button button" auto / 1fr 1fr 1fr;
     border: 1pt black solid;
     margin: 1rem;
 }
 
 .review__ticket .ticket__header{
-    grid-area: user;
-    justify-self: right;
-    align-self: center;
+    grid-area: header;
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
 }
 
 .review__ticket .ticket__title{
     grid-area: title;
+    justify-self: left;
 }
 
 .review__ticket .ticket__picture{
