hide the nav bar from the signup & login page

--- a/litreview/authentication/static/authentication/login.css
+++ b/litreview/authentication/static/authentication/login.css
@@ -1,10 +1,10 @@
 body{
     display: grid;
-    grid-template: "nav nav" auto "login signup" 1fr / 1fr 1fr;
+    grid-template: "blank blank" auto "login signup" 1fr / 1fr 1fr;
 }
 
-nav {
-    grid-area : nav
+.nav__bar__block{
+    visibility: hidden;
 }
 
 form {
