--- a/litreview/creation/static/creation/ticket_creation.css
+++ b/litreview/creation/static/creation/ticket_creation.css
@@ -1,3 +1,11 @@
+title {
+    font-size: 1.5rem;
+text-align: center;
+width: 50%;
+margin-right: auto;
+margin-left: auto;
+}
+
 #uploadPreview {
     max-height:200px;
     max-width:auto;
