--- a/litreview/creation/templates/creation/add_review.html
+++ b/litreview/creation/templates/creation/add_review.html
@@ -5,7 +5,7 @@
 
 {% block extrahead %}
     <link rel="stylesheet" href="{% static 'website/feed.css' %}" type="text/css" />
-    <link rel="stylesheet" href="{% static 'creation/review_creation.css' %}" type="text/css" />
+    {% comment %} <link rel="stylesheet" href="{% static 'creation/review_creation.css' %}" type="text/css" /> {% endcomment %}
     <link rel="stylesheet" href="{% static 'creation/add_review.css' %}" type="text/css" />
 {% endblock %}
 
