--- a/litreview/website/templates/website/review_snippet.html
+++ b/litreview/website/templates/website/review_snippet.html
@@ -50,9 +50,9 @@
 
     {% if user_feed %}
             <div class="user__posts__button">
-                <a href="{% url 'update_review' post.user post.headline %}?review_id={{post.id}}">
+                <a href="{% url 'update_review' post.user post.id %}?review_id={{post.id}}">
                     <button id="change__button" type="button" action="">Modifier</button></a>
-                <a href="{% url 'delete_review' post.user post.headline %}?review_id={{post.id}}">
+                <a href="{% url 'delete_review' post.user post.id %}?review_id={{post.id}}">
                     <button id="delete__button" type="button" action="">Supprimer</button></a>
             </div>
     {% endif %}
