--- a/litreview/website/templates/website/main.html
+++ b/litreview/website/templates/website/main.html
@@ -9,7 +9,7 @@
     {% url 'login' as post_url %}
     {% url 'login' as sub_url %}
 {% endif %}
-
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
