--- a/litreview/website/static/website/feed.css
+++ b/litreview/website/static/website/feed.css
@@ -1,3 +1,11 @@
+.ticket, form{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    justify-self: center;
+}
+
 .feed__block{
     margin-left: auto;
     margin-right: auto;
