bug fix: display of the wrong user when respond to other user ticket

--- a/litreview/website/templates/website/review_snippet.html
+++ b/litreview/website/templates/website/review_snippet.html
@@ -22,7 +22,7 @@
         <div class="ticket__header">
             <div class="ticket__user">
                 Ticket - 
-                {% if post.user == user%} 
+                {% if post.ticket.user == user%} 
                     Vous
                 {% else %}
                     {{post.ticket.user}}
